--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -12,7 +12,7 @@
             <div class="col">
                 {{!-- RENDER SORTABLE PROJECT TILES --}}
                 {{!-- Render --}}
-                {{#each project}}
+                {{#each projects}}
                 <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
                     <div class="card-header">Open Project</div>
                         <div class="card-body">
