--- a/views/partials/projectModal.handlebars
+++ b/views/partials/projectModal.handlebars
@@ -4,47 +4,26 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">Add Project</h5>
-        <button
-          type="button"
-          class="close"
-          data-dismiss="modal"
-          aria-label="Close"
-        >
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
         <div class="form-group">
           <label for="proj-title" class="text-left">Title:</label>
-          <input
-            type="text"
-            class="form-control"
-            id="proj-title"
-            aria-describedby="add-title"
-            placeholder="Project Title"
-          />
+          <input type="text" class="form-control" id="proj-title" aria-describedby="add-title"
+            placeholder="Project Title" />
           {{! <small id="add-title" class="form-text text-muted">Placeholder</small> }}
         </div>
         <div class="form-group">
           <label for="proj-description" class="text-left">Description:</label>
-          <input
-            type="text"
-            class="form-control"
-            id="proj-description"
-            placeholder="Brief Description"
-          />
+          <input type="text" class="form-control" id="proj-description" placeholder="Brief Description" />
         </div>
       </div>
       <div class="modal-footer">
-        <button
-          type="button"
-          class="btn btn-secondary"
-          data-dismiss="modal"
-        >Cancel</button>
-        <button type="button" class="btn btn-dark">Add</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button id="add" type="button" class="btn btn-dark">Add</button>
       </div>
     </div>
   </div>
 </div>
-
-<script src="/js/project.js"></script>
