--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -82,11 +82,11 @@
       </div>
   </div> 
 
-{{!-- WILL ADD IN 2 TASK MODALS, ONE WITH INPUTS TO ADD, ONE WITH GENERATED DATA --}}
-{{!-- THEN LINK UP WITH HARRYS CODE --}}
+{{!-- LINK UP WITH HARRYS CODE --}}
 
-{{!-- Create new task Modal --}}
-{{!-- NEEDS ALL THE INPUT FIELDS ADDED FOR TASK CREATION --}}
+{{!-- CONNECT BOTH WITH taskcard.js --}}
+{{!-- Will need post request with event listener by id: task-add-btn to add to database --}}
+{{!-- Create task Modal --}}
 <div class="modal" id="task-create-modal" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -103,25 +103,36 @@
       </div>
       <div class="modal-body">
         <div class="form-group">
-          <label for="proj-title" class="text-left">Title:</label>
+          <label for="task-title" class="text-left">Title:</label>
           <input
             type="text"
             class="form-control"
-            id="proj-title"
+            id="task-title"
             aria-describedby="add-title"
-            placeholder="Project Title"
+            placeholder="Add task"
+            required
           />
           {{! <small id="add-title" class="form-text text-muted">Placeholder</small> }}
         </div>
         <div class="form-group">
-          <label for="proj-description" class="text-left">Description:</label>
+          <label for="task-description" class="text-left">Description:</label>
           <input
             type="text"
             class="form-control"
-            id="proj-description"
-            placeholder="Brief Description"
+            id="task-description"
+            placeholder="Task details"
+            required
           />
         </div>
+        {{!-- <div class="form-group">
+          <label for="task-deadline" class="text-left">Deadline:</label>
+          <input
+            type="text"
+            class="form-control"
+            id="task-deadline"
+            placeholder="Enter deadline"
+          />
+        </div> --}}
       </div>
       <div class="modal-footer">
         <button
@@ -129,20 +140,19 @@
           class="btn btn-secondary"
           data-dismiss="modal"
         >Cancel</button>
-        <button type="button" class="btn btn-dark">Add</button>
+        <button type="button" id="task-add-btn" class="btn btn-dark">Add</button>
       </div>
     </div>
   </div>
 </div>
 
 {{!-- View task Modal --}}
-{{!-- NEEDS ALL THE SECTIONS FOR A FULLY CREATED TASK AND ALL ITS DATA --}}
-{{!-- AND STYLING --}}
+{{!-- Will need event listener and get request by task id upon clicking the corresponding task --}}
 <div class="modal" id="task-view-modal" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Add Project</h5>
+        <h5 class="modal-title">{{task.title}}</h5>
         <button
           type="button"
           class="close"
@@ -153,41 +163,12 @@
         </button>
       </div>
       <div class="modal-body">
-        <div class="form-group">
-          <label for="proj-title" class="text-left">Title:</label>
-          <input
-            type="text"
-            class="form-control"
-            id="proj-title"
-            aria-describedby="add-title"
-            placeholder="Project Title"
-          />
-          {{! <small id="add-title" class="form-text text-muted">Placeholder</small> }}
-        </div>
-        <div class="form-group">
-          <label for="proj-description" class="text-left">Description:</label>
-          <input
-            type="text"
-            class="form-control"
-            id="proj-description"
-            placeholder="Brief Description"
-          />
-        </div>
+        <p>{{task.contents}}</p>
       </div>
-      <div class="modal-footer">
-        <button
-          type="button"
-          class="btn btn-secondary"
-          data-dismiss="modal"
-        >Cancel</button>
-        <button type="button" class="btn btn-dark">Add</button>
       </div>
     </div>
   </div>
 </div>
-
-
-
 
         {{!-- <div id="taskDetailModal" class="modal">
         <div class="modal-content">
@@ -199,4 +180,4 @@
 
 <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
 <script src="/js/sortable.js"></script>
-<script src="/js/taskCardModal.js"></script>
+<script src="/js/taskcard.js"></script>
