--- a/views/partials/sidebar.handlebars
+++ b/views/partials/sidebar.handlebars
@@ -55,14 +55,14 @@
   </div>
 </div>
 <div class="card">
-    <div class="card-header" id="headingTwo">
+    <div class="card-header" id="headingThree">
       <h2 class="mb-0">
-        <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
           <i class="fas fa-comments" style="color: black;"></i> Chat
         </button>
       </h2>
     </div>
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
       <div class="card-body">
         Some placeholder content for the second accordion panel. This panel is hidden by default.
       </div>
