--- a/views/partials/sidebar.handlebars
+++ b/views/partials/sidebar.handlebars
@@ -31,8 +31,7 @@
 
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
     <ul id="userList">
-      <li class="card-body" id="userList">
-        Some plthis is using LI to the <code>.show</code> class.
+      <li class="card-body">
       </li>
     </ul>
     </div>
@@ -47,7 +46,7 @@
     </div>
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
       <ul id="projectList">
-      <li class="card-body" id="projectList">
+      <li class="card-body">
         Some placeholder content for the second accordion panel. This panel is hidden by default.
       </li>
       </ul>
@@ -64,7 +63,7 @@
     </div>
     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
       <div class="card-body">
-        Some placeholder content for the second accordion panel. This panel is hidden by default.
+        Some placeholder content for the third accordion panel. This panel is hidden by default.
       </div>
     </div>
   </div>
