current user name
added current user name to sidebar

--- a/views/partials/sidebar.handlebars
+++ b/views/partials/sidebar.handlebars
@@ -17,7 +17,7 @@
 
   <h4 class="text-center text-white">Welcome,</h3>
   {{! Add in once route has been added }}
-  <p class="text-center text-white">Add User First Last here</p>
+  <p class="text-center text-white" id="currentUser"></p>
   
 <div class="accordion" id="accordionExample">
   <div class="card">
@@ -68,8 +68,8 @@
     </div>
   </div>
 </div>
-
 </aside>
 
 <script src="/js/usersList.js"></script>
 <script src="/js/projectsList.js"></script>
+<script src="/js/currentUser.js"></script>
