--- a/views/partials/sidebar.handlebars
+++ b/views/partials/sidebar.handlebars
@@ -29,7 +29,7 @@
       </h2>
     </div>
 
-    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
     <ul id="userList">
       <li class="card-body">
       </li>
