--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,28 +9,28 @@
         {{> navbar }}
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="d-flex justify-content-start align-items-stretch flex-wrap">
                     {{!-- RENDER SORTABLE PROJECT TILES --}}
                     {{!-- Render --}}
                     {{#each projects}}
-                    <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
-                        <div class="card-header">Open Project</div>
+                    <div class="card text-white bg-dark mb-3 mr-3" style="width: 16rem; height: 12rem">
+                        <div class="card-header"><i class="fa-solid fa-list-check" style="color: #ffffff;"></i> Open Project</div>
                         <div class="card-body">
-                            <h5 class="card-title">{{name}}</h5>
-                            <p class="card-text">{{description}}</p>
+                            <h5 class="card-title text-white">{{name}}</h5>
+                            <p class="card-text text-white">{{description}}</p>
                         </div>
                     </div>
                     {{/each}}
-                    <button class="btn btn-dark" data-toggle="modal" data-target="#project-modal">
-                        <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
-                            <div class="card-body">
-                                <h5 class="card-title">
-                                    <i class="fa-regular fa-square-plus" style="color: #ffffff;"></i> Add Project
+                    <a href="#" data-toggle="modal" data-target="#project-modal" class="text-decoration-none">
+                        <div class="card text-white bg-transparent border-white mb-3" style="width: 16rem; height: 12rem">
+                            <div class="card-body d-flex align-center justify-content-center">
+                                <h5 class="card-title text-white mt-5">
+                                    <i class="fa-regular fa-square-plus" style="color: #ffffff;"></i> ADD PROJECT
                                 </h5>
                             </div>
                         </div>
+                    </a>
                 </div>
-                </button>
             </div>
         </div>
     </div>
