--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -14,7 +14,14 @@
                     {{!-- Render --}}
                     {{#each projects}}
                     <div class="card text-white bg-dark mb-3 mr-3" style="width: 16rem; height: 12rem">
-                        <div class="card-header"><i class="fa-solid fa-list-check" style="color: #ffffff;"></i> Open Project</div>
+                        <div class="card-header d-flex justify-content-between">
+                            <a href="#" data-toggle="tooltip" title="Tooltip for the first icon">
+                                <i class="fa-solid fa-list-check" style="color: #ffffff;"></i>
+                            </a>
+                            <a href="#" data-toggle="tooltip" title="Tooltip for the second icon">
+                                <i class="fa-solid fa-trash-can" style="color: #ffffff;"></i>
+                            </a>
+                        </div>
                         <div class="card-body">
                             <h5 class="card-title text-white">{{name}}</h5>
                             <p class="card-text text-white">{{description}}</p>
@@ -23,10 +30,8 @@
                     {{/each}}
                     <a href="#" data-toggle="modal" data-target="#project-modal" class="text-decoration-none">
                         <div class="card text-white bg-transparent border-white mb-3" style="width: 16rem; height: 12rem">
-                            <div class="card-body d-flex align-center justify-content-center">
-                                <h5 class="card-title text-white mt-5">
-                                    <i class="fa-regular fa-square-plus" style="color: #ffffff;"></i> ADD PROJECT
-                                </h5>
+                            <div class="card-body d-flex justify-content-center align-items-center">
+                                <h5 class="card-title text-center text-white"><i class="fa-regular fa-square-plus" style="color: #ffffff;"></i> ADD PROJECT</h5>
                             </div>
                         </div>
                     </a>
