--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -87,8 +87,8 @@
 {{!-- CONNECT BOTH WITH taskcard.js --}}
 {{!-- Will need post request with event listener by id: task-add-btn to add to database --}}
 {{!-- Create task Modal --}}
-<div class="modal" id="task-create-modal" tabindex="-1">
-  <div class="modal-dialog">
+<div class="modal fade" id="task-create-modal" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">Add New Task</h5>
@@ -148,8 +148,8 @@
 
 {{!-- View task Modal --}}
 {{!-- Will need event listener and get request by task id upon clicking the corresponding task --}}
-<div class="modal" id="task-view-modal" tabindex="-1">
-  <div class="modal-dialog">
+<div class="modal fade" id="task-view-modal" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">{{task.title}}</h5>
