--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -23,7 +23,7 @@
   </div>
 </nav>
 
-{{!-- {{> projectModal}} --}}
+{{> projectModal}}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
 <script src="/js/logout.js"></script>
