--- a/views/partials/chat.handlebars
+++ b/views/partials/chat.handlebars
@@ -1,5 +1,5 @@
 <div class="chat">
-    <div id="chatWindow">
+    <div id="chatWindow" data-project-id="{{project.id}}">
 
     </div>
     <form id="messageForm">
