--- a/views/partials/sidebar.handlebars
+++ b/views/partials/sidebar.handlebars
@@ -1,73 +1,68 @@
+<aside class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 280px">
 
-<aside
-  class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark"
-  style="width: 280px"
->
+  <a class="navbar-brand ml-3 mb-2" href="#Home"><img src="/images/Logo.png" width="200" alt="Logo" /></a>
 
-  <a class="navbar-brand ml-3 mb-2" href="#Home"><img
-      src="/images/Logo.png"
-      width="200"
-      alt="Logo"
-    /></a>
-
-{{!--SIDEBAR NEEDS COLLAPSIBLE MENUS --}}
-{{!-- POPULATE WITH USER AND PROJECT DATA --}}
-{{!-- PROJECT TO BE CLICKABLE AND DIRECT TO INDIVIDUAL PROJECT --}}
-{{!-- ADD CHAT TO SIDEBAR NAV THAT IS ALSO COLLAPSIBLE --}}
+  {{!--SIDEBAR NEEDS COLLAPSIBLE MENUS --}}
+  {{!-- POPULATE WITH USER AND PROJECT DATA --}}
+  {{!-- PROJECT TO BE CLICKABLE AND DIRECT TO INDIVIDUAL PROJECT --}}
+  {{!-- ADD CHAT TO SIDEBAR NAV THAT IS ALSO COLLAPSIBLE --}}
 
   <h4 class="text-center text-white">Welcome,</h3>
-  {{! Add in once route has been added }}
-  <p class="text-center text-white" id="currentUser"></p>
-  
-<div class="accordion" id="accordionExample">
-  <div class="card">
-    <div class="card-header" id="headingOne">
-      <h2 class="mb-0">
-        <button class="btn btn-link btn-block text-left text-decoration-none" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          <i class="fa fa-user" aria-hidden="true"></i> Users
-        </button>
-      </h2>
-    </div>
+    {{! Add in once route has been added }}
+    <p class="text-center text-white" id="currentUser"></p>
 
-    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-    <ul id="userList">
-      <li class="card-body">
-      </li>
-    </ul>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingTwo">
-      <h2 class="mb-0">
-        <button class="btn btn-link btn-block text-left text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          <i class="fas fa-project-diagram" style="color: black;"></i> Projects
-        </button>
-      </h2>
-    </div>
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-      <ul id="projectList">
-      <li class="card-body">
-        Some placeholder content for the second accordion panel. This panel is hidden by default.
-      </li>
-      </ul>
-    </div>
-  </div>
-</div>
-<div class="card">
-    <div class="card-header" id="headingThree">
-      <h2 class="mb-0">
-        <button class="btn btn-link btn-block text-left collapsed text-decoration-none" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          <i class="fas fa-comments" style="color: black;"></i> Chat
-        </button>
-      </h2>
-    </div>
-    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-      <div class="card-body">
-        Some placeholder content for the third accordion panel. This panel is hidden by default.
+    <div class="accordion" id="accordionExample">
+      <div class="card">
+        <div class="card-header" id="headingOne">
+          <h2 class="mb-0">
+            <button class="btn btn-link btn-block text-left text-decoration-none" type="button" data-toggle="collapse"
+              data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              <i class="fa fa-user" aria-hidden="true"></i> Users
+            </button>
+          </h2>
+        </div>
+
+        <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+          <ul id="userList">
+            <li class="card-body">
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-header" id="headingTwo">
+          <h2 class="mb-0">
+            <button class="btn btn-link btn-block text-left text-decoration-none collapsed" type="button"
+              data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              <i class="fas fa-project-diagram" style="color: black;"></i> Projects
+            </button>
+          </h2>
+        </div>
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+          <ul id="projectList">
+            <li class="card-body">
+              Some placeholder content for the second accordion panel. This panel is hidden by default.
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
-</div>
+    <div class="card">
+      <div class="card-header" id="headingThree">
+        <h2 class="mb-0">
+          <button class="btn btn-link btn-block text-left collapsed text-decoration-none" type="button"
+            data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            <i class="fas fa-comments" style="color: black;"></i> Chat
+          </button>
+        </h2>
+      </div>
+      <div id="collapseThree" class="collapse show" aria-labelledby="headingThree" data-parent="#accordionExample">
+        <div class="card-body">
+          {{> chat}}
+        </div>
+      </div>
+    </div>
+    </div>
 </aside>
 
 <script src="/js/usersList.js"></script>
