--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,18 +9,18 @@
         {{> navbar }}
         <div class="container">
             <div class="row">
-                <div class="d-flex justify-content-start align-items-stretch flex-wrap">
+                <div class="d-flex justify-content-start align-items-stretch flex-wrap trash-card">
                     {{!-- RENDER SORTABLE PROJECT TILES --}}
                     {{!-- Render --}}
                     {{#each projects}}
                     <div class="card text-white bg-dark mb-3 mr-3" style="width: 16rem; height: 12rem">
                         <div class="card-header d-flex justify-content-between">
-                            <a href="#" data-toggle="tooltip" title="Tooltip for the first icon">
+                            <a href="/projects/{{id}}">
                                 <i class="fa-solid fa-list-check" style="color: #ffffff;"></i>
                             </a>
-                            <a href="#" data-toggle="tooltip" title="Tooltip for the second icon">
-                                <i class="fa-solid fa-trash-can" style="color: #ffffff;"></i>
-                            </a>
+                            <button class="delete-icon">
+                                <i data-id="{{id}}" class="fa-solid fa-trash-can" style="color: #ffffff;"></i>
+                            </button> 
                         </div>
                         <div class="card-body">
                             <h5 class="card-title text-white">{{name}}</h5>
