--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,12 +18,6 @@ ul {
     padding: 0;
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
 /* Background */
 body {
     background-image: linear-gradient(to right, #f45474, #6a82fb);
@@ -31,13 +25,10 @@ body {
     margin: 0;
 }
 
-;
-
-
 /* Text */
 h1 {
     font-size: 3.5rem;
-    margin-top: 12rem;
+    margin-top: 0rem;
     margin-bottom: 0rem;
     font-family: "Wix Madefor Display", sans-serif;
     font-weight: 400;
@@ -52,8 +43,6 @@ h1 {
     font-weight: 400;
     font-style: normal;
 }
-
-;
 
 h5 {
     font-family: "Montserrat", sans-serif;
@@ -132,8 +121,7 @@ aside .nav-pills .nav-link:hover {
     padding: 20px;
 }
 
-;
-
+/* Chat */
 .chat>form>button {
     color: black;
 }
@@ -181,13 +169,13 @@ aside .nav-pills .nav-link:hover {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    width: 100%;
 }
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
     background-color: #ddd;
 }
-
 
 /* Change background color of logout button on hover */
 .logout-button:hover {background-color: #343a40;}
@@ -205,10 +193,6 @@ aside .nav-pills .nav-link:hover {
 /* Change background color of logout button on hover */
 .logout-button:hover {
     background-color: #343a40;
-}
-
-.dropdown-content {
-    width: 100%;
 }
 
 #proj-description {
