--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -9,6 +9,12 @@
     <div class="content">
       {{> navbar }}
       <div class="container">
+        <div class="row">
+          <div class="col ml-3">
+            <h3 class="text-white">{{project.name}}</h3>
+            <p class="text-white">{{project.description}}</p>
+          </div>
+        </div>
         <div class="row" id="task-board">
           <div class="col" id="to-do">
             {{!-- Parent Card --}}
@@ -16,7 +22,7 @@
               <div class="card">
                 <div class="card-header">
                   <h5 class="card-title"><i class="fa-regular fa-circle-down" style="color: #e45656;"></i> To Do</h5>
-                  <p class="card-subtitle">This item hasn't been started</p>
+                  {{!-- <p class="card-subtitle">This item hasn't been started</p> --}}
                 </div>
                 <div class="card-body" style="max-height: 500px; min-height: 200px; overflow-y: auto">
                   <!-- Nested Child Card -->
@@ -39,9 +45,9 @@
             <div class="container">
               <div class="card">
                 <div class="card-header">
-                  <h5 class="card-title"><i class="fa-solid fa-circle-half-stroke" style="color: #e0cd61;"></i> In
+                  <h5 class="card-title"><i class="fa-solid fa-circle-half-stroke" style="color: #f2dc61;"></i> In
                     Progress</h5>
-                  <p class="card-subtitle">This is actively being worked on</p>
+                  {{!-- <p class="card-subtitle">This is actively being worked on</p> --}}
                 </div>
                 <div class="card-body" style="max-height: 500px; min-height: 200px; overflow-y: auto">
                   <!-- Nested Child Card -->
@@ -63,7 +69,7 @@
               <div class="card">
                 <div class="card-header">
                   <h5 class="card-title"><i class="fa-regular fa-circle-check" style="color: #6fb854;"></i> Done</h5>
-                  <p class="card-subtitle">This has been completed</p>
+                  {{!-- <p class="card-subtitle">This has been completed</p> --}}
                 </div>
                 <div class="card-body" style="max-height: 500px; min-height: 200px; overflow-y: auto">
                   <!-- Nested Child Card -->
