--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -155,6 +155,7 @@
 
 {{!-- View task Modal --}}
 {{!-- Will need event listener and get request by task id upon clicking the corresponding task --}}
+{{!-- Add deadline same as above --}}
 <div class="modal fade" id="task-view-modal" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
