--- a/views/partials/sidebar.handlebars
+++ b/views/partials/sidebar.handlebars
@@ -1,5 +1,3 @@
-<aside class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 280px">
-
 <aside
   class="d-flex flex-column flex-shrink-0 text-white bg-dark"
   style="width: 300px"
@@ -70,12 +68,12 @@
   </div>
 
 {{!-- Chat window --}}
-    <div class="card">
-      <div class="card-header" id="headingThree">
+    <div class="card border-secondary">
+      <div class="card-header bg-dark" id="headingThree">
         <h2 class="mb-0">
-          <button class="btn btn-link btn-block text-left collapsed text-decoration-none" type="button"
+          <button class="btn btn-secondary bg-transparent border-0 btn-block text-left collapsed text-decoration-none" type="button"
             data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            <i class="fas fa-comments" style="color: black;"></i> Chat
+            <i class="fas fa-comments" style="color: white;"></i> Chat
           </button>
         </h2>
       </div>
