homepage styling completed

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,8 +7,8 @@
     <!-- Page content -->
     <div class="content">
         {{> navbar }}
-        <div class="container">
-            <div class="row">
+        <div class="container-fluid">
+            <div class="row ml-4">
                 <div class="d-flex justify-content-start align-items-stretch flex-wrap trash-card">
                     {{!-- RENDER SORTABLE PROJECT TILES --}}
                     {{!-- Render --}}
