--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -31,8 +31,8 @@
                     {{/each}}
                   </ul>
                 </div>
-                <div class="card-footer border-light d-flex justify-content-end">
-                  <button type="button" class="btn btn-outline-secondary text-white" data-toggle="modal" data-target="#task-create-modal"><i class="fa-regular fa-square-plus"
+                <div class="card-footer border-light d-flex justify-content-center">
+                  <button type="button" class="btn btn-outline-light shadow-sm" data-toggle="modal" data-target="#task-create-modal"><i class="fa-regular fa-square-plus"
                       style="color: white;"></i> Add Item</button>
                 </div>
               </div>
