--- a/public/css/style.css
+++ b/public/css/style.css
@@ -211,7 +211,7 @@ aside .nav-pills .nav-link:hover {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: #ffffff;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
@@ -228,7 +228,7 @@ aside .nav-pills .nav-link:hover {
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
-    background-color: #ddd;
+    background-color: #edb8b8b9;
 }
 
 /* Change background color of logout button on hover */
@@ -254,3 +254,18 @@ aside .nav-pills .nav-link:hover {
 .hide {
     display: none;
 }
+
+/* Invite */
+
+/* Custom styling for the list items */
+/* .list-group-item {
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    color: #ffffff;
+  }
+  
+  .list-group-item:last-child {
+    border-bottom: none;
+  }
+   */
